--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 baseurl:
 url: https://lp-github.github.io
 date_format: "ordinal"
-title: 我的博客
-subtitle: "打码不能改变人生"
-description: "李平的博客"
-keywords: 码志, Zhuang Ma, mzlogin, mazhuang
+title: 小组博客
+subtitle: "golang从入门到放弃"
+description: "服务计算小组博客"
+keywords: 项目博客
 timezone: Asia/Shanghai
 encoding: "utf-8"
 side_bar_repo_limit: 5
@@ -15,7 +15,7 @@ side_bar_repo_limit: 5
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: Ping Li
+author: ServiceComputingGroup
 #------------------#
 #organization: zkh360.com#
 #organization_url: http://www.zkh360.com#
@@ -83,7 +83,7 @@ collections:
         output: true
         permalink: /wiki/:path/
 
-repository: lp-github/lp-github.github.io
+repository: ServiceComputingGroup/ServiceComputingGroup.github.io
 
 # ---------------- #
 #      Comments    #
@@ -97,14 +97,14 @@ disqus:
     username: 
 # https://imsun.net/posts/gitment-introduction/
 gitment:
-    owner: lp-github.github.io
+    owner: ServiceComputingGroup.github.io
     repo: blog-comments
     oauth:
         client_id: d2e1cbbd298958076462
         client_secret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
 # https://github.com/gitalk/gitalk#install
 gitalk:
-    owner: lp-github
+    owner: ServiceComputingGroup
     repo: blog-comments
     clientID: d2e1cbbd298958076462
     clientSecret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
