--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ author: ServiceComputingGroup
 #organization: zkh360.com#
 #organization_url: http://www.zkh360.com#
 #-----------------#
-github_username: lp-github
-location: ShanDong, China
-email: 3144461554@qq.com
+github_username: 服务计算小组-李怡科
+location: Guangzhou, China
+email: 1485578188@qq.com
 
 # ---------------- #
 #    Navigation    #
